syntax = "proto3";

package order;

service OrderService {
  rpc InsertOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string orderId = 1;
  string customerId = 2;
  string customerPhoneNumber = 3;
  repeated string items = 4;
}

message OrderResponse {
  string orderId = 1;
  string status = 2;
}